Minor improvements to ResourcesTypeAdapter which allows performance gains when searching a Hashmap where the widgets are stored.